--- a/table2/index.html
+++ b/table2/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- "new table" -->
     <table border="1">
         <tr>
             <td colspan="2">cell 1</td>
